# jtml-v2

./: .gitignore  ASTNodes.h  CONTRIBUTING.md  Dockerfile  JTMLElement.g4  JTMLVisitor.cpp  JTMLVisitor.h  LICENSE  Makefile  README.md  ROADMAP.md  __init__.py  jtml_parser_bindings.cpp  pyproject.toml  requirements.txt  sample.op  setup.py
JTMLElementParser/: JTMLElement.interp  JTMLElement.tokens  JTMLElementBaseListener.cpp  JTMLElementBaseListener.h  JTMLElementBaseVisitor.cpp  JTMLElementBaseVisitor.h  JTMLElementLexer.cpp  JTMLElementLexer.h  JTMLElementLexer.interp  JTMLElementListener.cpp  JTMLElementListener.h  JTMLElementParser.cpp  JTMLElementParser.h  JTMLElementVisitor.cpp  JTMLElementVisitor.h
compiler/: ast_nodes.py  compiler.py  semantic_analyzer.py
docs/: mkdocs.yml
docs/docs/: a.html  getting-started.md  index.md  introduction.md  language_fundamentals.md
interpreter/: __init__.py  optimizer.py
jtml_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jtml_elements/: CMakeLists.txt  jtml_ast.cpp  jtml_bindings.cpp  jtml_interpreter.cpp  jtml_lexer.cpp  jtml_parser.cpp  jtml_transpiler.cpp  main.cpp  main_tests.cpp
jtml_elements/examples/: dashboard.jtml  define_unbind.jtml  index.jtml  login_form.jtml  profile_page.jtml  style.jtml
jtml_types/: type_analyzer.py
lexer/: lexer.py
opalg/: cli.py
opalg/compiler/: __init__.py  ast_nodes.py  compiler.py  intermediate_representation.py  semantic_analyzer.py
opalg/interpreter/: code_generator.py  interpreter.py  optimizer.py
opalg/opalg_types/: type_analyzer.py
opalg/parser/: control_flow.py  crypto.py  database.py  error_handling.py  expressions.py  functions_and_classes.py  jtml_elements.py  parser.out  parser.py  quantum.py  statements.py  types_and_parameters.py  utils.py  variables_and_constants.py
parser/: __init__.py  control_flow.py  crypto.py  database.py  error_handling.py  expressions.py  functions_and_classes.py  jtml_elements.py  parser.out  parser.py  quantum.py  statements.py  types_and_parameters.py  utils.py  variables_and_constants.py
tests/: __init__.py  test_jtml_cpp_integration.py  test_jtml_parser.py  test_jtmlparser.py  test_lexer.py  test_parser.py
tests/jtml/: attributes_only.jtml  complex_example.jtml  defines.jtml  minimal.jtml  mismatched_tags.jtml  missing_close_tag.jtml  nested_elements.jtml  show_statements.jtml
tests/opalg/: hello_world.op
